python_scripts/logs/SVR_XGBoost_test_2.log
nohup: ignoring input
  File "/home/cat/descriptors/python_scripts/descriptor_models.py", line 612
    print("email sent.)
          ^
SyntaxError: unterminated string literal (detected at line 612)
